fix: correct spelling errors and improve README clarity; update file permissions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Trusthworthy AI Demo Environment",
+    "name": "Trustworthy AI Demo Environment",
     "build": {
         "dockerfile": "Dockerfile"
     },
